# finance-etl-pipeline

./: LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
scripts/: build_dashboard.py  export_bi_datasets.py
src/finance_etl/: cli.py  pipeline.py  quality.py
tests/: test_cli.py
